--- a/base/package.json
+++ b/base/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2",
     "html-webpack-plugin": "^2.22.0",
+    "jquery": "^3.1.1",
     "node-sass": "^3.10.1",
     "normalize.css": "^5.0.0",
     "postcss-load": "^0.1.6",
