--- a/base/package.json
+++ b/base/package.json
@@ -32,6 +32,7 @@
     "node-sass": "^3.10.1",
     "normalize.css": "^5.0.0",
     "postcss-load": "^0.1.6",
+    "react-addons-css-transition-group": "^15.3.2",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
