--- a/base/package.json
+++ b/base/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-router": "^2.7.0"
+    "react-router": "^2.7.0",
+    "react-weui": "^0.4.1",
+    "weui": "^0.4.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
