--- a/base/package.json
+++ b/base/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-3": "^6.17.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.3.1",
     "eslint-config-airbnb": "^10.0.1",
@@ -29,6 +30,8 @@
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "jquery": "^3.1.1",
     "node-sass": "^3.10.1",
@@ -37,6 +40,7 @@
     "react-addons-css-transition-group": "^15.3.2",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
   }
