--- a/base/package.json
+++ b/base/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fastclick": "^1.0.6",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "jquery": "^3.1.1",
