--- a/base/package.json
+++ b/base/package.json
@@ -44,6 +44,7 @@
     "react-addons-css-transition-group": "^15.3.2",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^4.0.2",
+    "store": "^1.3.20",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
