--- a/base/.eslintrc
+++ b/base/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "airbnb",
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "linebreak-style": [0, "windows"],//换行风格
   },
   "env" :{
     "browser": true,
