--- a/base/.babelrc
+++ b/base/.babelrc
@@ -1,8 +1,10 @@
 {
 	"presets": [
-  		"es2015",
-  		"react",
+		"es2015",
+		"react",
 		"stage-3"
- 	],
-	"plugins": []
+	],
+	"plugins": [
+		"transform-runtime"
+	]
 }
