--- a/base/package.json
+++ b/base/package.json
@@ -20,9 +20,11 @@
     "autoprefixer-loader": "3.2.0",
     "babel-core": "6.13.2",
     "babel-loader": "6.2.5",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-3": "6.17.0",
+    "babel-runtime": "^6.22.0",
     "css-loader": "0.25.0",
     "extract-text-webpack-plugin": "1.0.1",
     "fastclick": "1.0.6",
